<resources>
    <string name="app_name">Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ leaders</string>
    <string name="hello">hello_blank_fragment</string>
    <string name="submit">Submit</string>
    <string name="title_activity_submit"> </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="form_surname">form surname</string>
    <string name="email">Email</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="splash_screen">splash_screen</string>
    <string name="connection_error_message">Failed to connect, check your internet connection</string>
    <string name="submission_succesful">Submission Successful</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="submission_not_successful">Submission not successful</string>
    <string name="are_you_sure">Are you sure   </string>
    <string name="yes">YES</string>
    <string name="check">check</string>
    <string name="cancel">cancel</string>
    <string name="question_mark">question_mark</string>
</resources>