<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:background="@drawable/custom_dialog_bg">

    <Button
        android:id="@+id/button_yes"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custom_outline_button"
        android:text="@string/yes"
        android:textColor="@color/colorAccent"
        app:rippleColor="#33AAAAAA"
        app:strokeWidth="5dp" />

    <ImageView
        android:id="@+id/imageView_no"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:layout_alignEnd="@+id/query"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/cancel"
        app:srcCompat="@drawable/ic_baseline_cancel_24" />

    <ImageView
        android:id="@+id/imageView_question_mark"
        android:layout_width="94dp"
        android:layout_height="63dp"
        android:layout_alignEnd="@+id/query"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="109dp"
        android:backgroundTint="#979393"
        android:contentDescription="@string/question_mark"
        android:foregroundTint="#B6B5B5"
        app:srcCompat="@drawable/question_mark" />

    <TextView
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_above="@+id/button_yes"
        android:layout_below="@+id/imageView_no"
        android:layout_centerInParent="true"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="58dp"
        android:text="@string/are_you_sure"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="30sp" />

</RelativeLayout>










