<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bodyform"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Button
        android:id="@+id/submit_project_button"
        android:layout_width="141dp"
        android:layout_height="44dp"
        android:background="@drawable/custom_gradient_button"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

    <EditText
        android:id="@+id/edittext_surname"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="40dp"
        android:autofillHints=""
        android:background="@color/white"
        android:cursorVisible="true"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edittext_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="@color/white"
        android:cursorVisible="true"
        android:hint="@string/form_surname"
        android:inputType="text"
        android:padding="4dp"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edittext_surname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <EditText
        android:id="@+id/edittext_github_link"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:autofillHints="www.github.com/"
        android:background="@color/white"
        android:hint="@string/project_on_github_link"
        android:inputType="textWebEditText"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_name" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="329dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:autofillHints="Email"
        android:background="@color/white"
        android:cursorVisible="true"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_github_link" />


</androidx.constraintlayout.widget.ConstraintLayout>